--- a/.github/workflows/process-bookings.yml
+++ b/.github/workflows/process-bookings.yml
@@ -85,7 +85,45 @@ jobs:
           retention-days: 7
       
       - name: Commit updated queue
+        id: auto_commit_queue # Added id
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Update booking queue after processing
           file_pattern: booking-queue.json
+      
+      - name: Prepare screenshot list for Discord
+        id: list_screenshots
+        if: ${{ env.TAKE_SCREENSHOTS != 'false' }}
+        run: |
+          # This script finds *.png files in logs/ and creates a comma-separated list.
+          # It handles cases where no png files are found or the logs/ directory doesn't exist.
+          shopt -s nullglob # Ensures that if no files match, the array is empty
+          files_array=(logs/*.png)
+          shopt -u nullglob # Reset nullglob
+
+          if [ ${#files_array[@]} -eq 0 ]; then
+            echo "No screenshots found to send to Discord."
+            echo "::set-output name=files_list::"
+          else
+            # Join array elements with comma
+            joined_files=$(printf ",%s" "${files_array[@]}")
+            joined_files=${joined_files:1} # Remove leading comma
+            echo "Screenshots to send: $joined_files"
+            echo "::set-output name=files_list::$joined_files"
+          fi
+        shell: bash
+
+      - name: Send Discord notification
+        if: success() && env.TAKE_SCREENSHOTS != 'false' && secrets.DISCORD_WEBHOOK_URL != ''
+        uses: tsayen/discord-webhook-action@v2
+        with:
+          webhook_url: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          content: |
+            Golf booking process finished.
+            Status: ${{ steps.process-queue.outcome }}
+            ${{ steps.auto_commit_queue.outputs.changed_files == 'true' && format('Queue updated in commit: {0}/{1}/commit/{2}', github.server_url, github.repository, steps.auto_commit_queue.outputs.commit_hash) || 'Booking queue: No changes.' }}
+            Workflow Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+            ${{ steps.list_screenshots.outputs.files_list != '' && 'Screenshots are attached.' || 'No screenshots were generated to attach.' }}
+          file: ${{ steps.list_screenshots.outputs.files_list }}
+          username: "Golf Bot"
+          # avatar_url: "YOUR_AVATAR_URL_HERE" # Optional: uncomment and set your avatar URL
